package estructural.flyweight;

public interface Enemy {
  void setWeapon(String weapon);
  void lifePoints();
}
